[package]
name = "uniplay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.12", features = ["derive"] }
mpvipc = "1.2.1"
rand = "0.8.5"
rumqttc = "0.13.0"
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
