[package]
name = "uniplay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.8"
mpvi = { git = "https://github.com/joleeee/mpvi" }
rand = "0.8.5"
rumqttc = "0.13.0"
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
tokio = { version = "1", features = ["full"] }
async-trait = "0"
strum = "0.24.1"
futures = "0.3"
